// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigation elements - Dashboard, LogNewWorkout, ViewTrainingLogs are displayed 1`] = `
<div>
  <header>
    <nav
      class="navbar navbar-expand-md navbar-dark fixed-top bg-dark"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        Rowfitt
      </a>
      <button
        class="navbar-toggler"
        type="button"
        data-toggle="collapse"
        data-target="#navbarCollapse"
        aria-controls="navbarCollapse"
        aria-expanded="false"
        aria-label="Toggle navigation"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbarCollapse"
      >
        <ul
          class="navbar-nav mr-auto"
        >
          <li
            class="nav-item active"
          >
            <a
              class="nav-link"
              href="/"
            >
              Dashboard 
              <span
                class="sr-only"
              >
                (current)
              </span>
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/log-new-workout"
            >
              Log New Workout
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/view-training-log"
            >
              View Training Log
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </header>
  <div>
    <br />
    <br />
    <br />
    <h2>
      This is the dashboard
    </h2>
  </div>
</div>
`;

exports[`navigation from top nav to 'Log New Workout' link to 'Single Distance' link takes user to LogSingleDistanceWorkout page 1`] = `
<div>
  <header>
    <nav
      class="navbar navbar-expand-md navbar-dark fixed-top bg-dark"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        Rowfitt
      </a>
      <button
        class="navbar-toggler"
        type="button"
        data-toggle="collapse"
        data-target="#navbarCollapse"
        aria-controls="navbarCollapse"
        aria-expanded="false"
        aria-label="Toggle navigation"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbarCollapse"
      >
        <ul
          class="navbar-nav mr-auto"
        >
          <li
            class="nav-item active"
          >
            <a
              class="nav-link"
              href="/"
            >
              Dashboard 
              <span
                class="sr-only"
              >
                (current)
              </span>
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/log-new-workout"
            >
              Log New Workout
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/view-training-log"
            >
              View Training Log
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </header>
  <div>
    <br />
    <br />
    <br />
    <br />
    <h2>
      Log Single Distance Workout
    </h2>
  </div>
</div>
`;
